--- a/.github/workflows/kanban-automation.yml
+++ b/.github/workflows/kanban-automation.yml
@@ -1,30 +1,33 @@
 name: Kanban Board Automation
 
 on:
-  pull_request:
-    types: [opened]
   issues:
-    types: [closed]
+    types:
+      - opened
+      - closed
+  pull_request:
+    types:
+      - opened
 
 jobs:
-  move_card_on_pr:
+  add-to-in-progress:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && (github.event.action == 'opened')
     steps:
-      - name: Move linked issue to In Progress
-        uses: alex-page/github-project-automation-plus@v0.8.3
+      - uses: actions/add-to-project@v0.4.0
         with:
-          project: "Grupo 7's DevOps Agile project"
-          column: "In progress"
-          repo-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          
-  move_card_on_close:
-    runs-on: ubuntu-latest
+          project-url: https://github.com/users/lealcharro/projects/1
+          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN  }}
+          labeled: bug, enhancement
+          label-operator: OR
+          column-name: "In Progress"
+
+  add-to-done:
     if: github.event_name == 'issues' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
     steps:
-      - name: Move closed issues to Done
-        uses: alex-page/github-project-automation-plus@v0.8.3
+      - uses: actions/add-to-project@v0.4.0
         with:
-          project: "Grupo 7's DevOps Agile project"
-          column: "Done"
-          repo-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          project-url: https://github.com/users/lealcharro/projects/1
+          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          column-name: "Done"
