--- a/.github/workflows/kanban-automation.yml
+++ b/.github/workflows/kanban-automation.yml
@@ -1,33 +1,55 @@
-name: Kanban Board Automation
+name: Kanban Board Automation 
 
 on:
   issues:
-    types:
-      - opened
-      - closed
+    types: [closed]
   pull_request:
-    types:
-      - opened
+    types: [opened, ready_for_review]
 
 jobs:
-  add-to-in-progress:
-    if: github.event_name == 'pull_request'
+  move_issues:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@v0.4.0
+      - name: Move issue to In Progress when PR is opened or ready for review
+        if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'ready_for_review')
+        uses: actions/github-script@v7
         with:
-          project-url: https://github.com/users/lealcharro/projects/3
-          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN  }}
-          labeled: bug, enhancement
-          label-operator: OR
-          column-name: "In Progress"
+          script: |
+            const projectId = 'PVT_kwHOCAZAJs4A5AAx';
+            const statusFieldId = 'PVTSSF_lAHOCAZAJs4A5AAxzgt33Fk';
+            const inProgressOptionId = '47fc9ee4';
+            const issueNumbers = (context.payload.pull_request.body.match(/#(\d+)/g) || []).map(s => s.replace('#', ''));
+            for (const issue_number of issueNumbers) {
+              // Buscar el item del proyecto asociado a la issue
+              const items = await github.graphql(query($projectId:ID!, $first:Int!) {\n  node(id: $projectId) {\n    ... on ProjectV2 {\n      items(first: $first) {\n        nodes {\n          id\n          content {\n            ... on Issue { number }\n          }\n        }\n      }\n    }\n  }\n}, { projectId, first: 100 });
+              const item = items.node.items.nodes.find(i => i.content && i.content.number == issue_number);
+              if (item) {
+                await github.graphql(mutation($projectId:ID!, $itemId:ID!, $fieldId:ID!, $optionId:String!) {\n  updateProjectV2ItemFieldValue(input: {\n    projectId: $projectId,\n    itemId: $itemId,\n    fieldId: $fieldId,\n    value: { singleSelectOptionId: $optionId }\n  }) {\n    projectV2Item { id }\n  }\n}, {
+                  projectId,
+                  itemId: item.id,
+                  fieldId: statusFieldId,
+                  optionId: inProgressOptionId
+                });
+              }
+            }
 
-  add-to-done:
-    if: github.event_name == 'issues' && github.event.action == 'closed'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/add-to-project@v0.4.0
+      - name: Move issue to Done when issue is closed
+        if: github.event_name == 'issues' && github.event.action == 'closed'
+        uses: actions/github-script@v7
         with:
-          project-url: https://github.com/users/lealcharro/projects/3
-          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          column-name: "Done"
+          script: |
+            const projectId = 'PVT_kwHOCAZAJs4A5AAx';
+            const statusFieldId = 'PVTSSF_lAHOCAZAJs4A5AAxzgt33Fk';
+            const doneOptionId = '98236657';
+            const issue_number = context.payload.issue.number;
+            // Buscar el item del proyecto asociado a la issue
+            const items = await github.graphql(query($projectId:ID!, $first:Int!) {\n  node(id: $projectId) {\n    ... on ProjectV2 {\n      items(first: $first) {\n        nodes {\n          id\n          content {\n            ... on Issue { number }\n          }\n        }\n      }\n    }\n  }\n}, { projectId, first: 100 });
+            const item = items.node.items.nodes.find(i => i.content && i.content.number == issue_number);
+            if (item) {
+              await github.graphql(mutation($projectId:ID!, $itemId:ID!, $fieldId:ID!, $optionId:String!) {\n  updateProjectV2ItemFieldValue(input: {\n    projectId: $projectId,\n    itemId: $itemId,\n    fieldId: $fieldId,\n    value: { singleSelectOptionId: $optionId }\n  }) {\n    projectV2Item { id }\n  }\n}, {
+                projectId,
+                itemId: item.id,
+                fieldId: statusFieldId,
+                optionId: doneOptionId
+              });
+            }
